--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
+# This file lists all contributors to the repository.
 Melody Tsekeni <tanyatsekenie@gmail.com>
 Clifford Mapesa <cliffordmapesa8@gmail.com>
